--- a/css/styles.css
+++ b/css/styles.css
@@ -339,13 +339,15 @@ button {
   display: flex;
   flex-wrap: wrap;
 }
-.portfolio-item:nth-child(-n + 6) {
+.portfolio-item {
+  width: 370px;
+  margin-right: 30px;
   margin-bottom: 30px;
 }
-.portfolio-item {
-  margin-right: 30px;
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
-.portfolio-item:nth-child(3n + 3) {
+.portfolio-item:nth-child(3n) {
   margin-right: 0;
 }
 .portfolio-text-wraper {
@@ -356,7 +358,6 @@ button {
 .portfolio-item-discription {
   margin-top: 4px;
 }
-
 /*container footer*/
 .footer-section {
   padding: 60px 0;
@@ -376,27 +377,17 @@ address {
   display: flex;
   align-items: center;
 }
-.contanct-icon-envelope {
-  width: 16px;
-  height: 12px;
+.contanct-icon {
   margin-right: 10px;
   cursor: pointer;
-}
-.contanct-icon-envelope {
   fill: currentColor;
 }
-.contanct-icon-smartphone {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  cursor: pointer;
-}
-.contanct-icon-smartphone {
-  fill: currentColor;
-}
+
 /*hero*/
 
 .hero {
+  width: 1600px;
+  margin: 0 auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero.jpg');
   background-position: center;
@@ -404,26 +395,13 @@ address {
 }
 /*features*/
 
-.feature-item::before {
-  display: block;
-  content: '';
-  height: 120px;
+.feature-item-block {
+  display: flex;
+  justify-content: center;
+  padding: 25px 0;
   background-color: var(--background-section);
   margin-bottom: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.icon-antena::before {
-  background-image: url(../images/antena.svg);
-}
-.icon-watch::before {
-  background-image: url(../images/watch.svg);
-}
-.icon-vector::before {
-  background-image: url(../images/vector.svg);
-}
-.icon-astronaut::before {
-  background-image: url(../images/astronaut.svg);
+  border-radius: 4px;
 }
 
 /*team social*/
@@ -468,6 +446,9 @@ address {
 .customers-list {
   display: flex;
 }
+.customers-item:not(:last-child) {
+  margin-right: 30px;
+}
 .customers-link {
   display: flex;
   align-items: center;
@@ -478,9 +459,6 @@ address {
   border-radius: 4px;
   background-color: var(--background-primary);
   color: var(--icon-color);
-}
-.customers-item:not(:last-child) {
-  margin-right: 30px;
 }
 .customers-link:hover,
 .customers-link:focus {
@@ -523,30 +501,33 @@ address {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
+  color: var(--background-primary);
 }
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent);
+  color: var(--background-primary);
 }
 .social-icon {
-  fill: var(--background-primary);
+  fill: currentColor;
 }
 
 /*buttons*/
-.buttons-item:hover,
-.buttons-item:focus {
+
+.secondary-button:hover,
+.secondary-button:focus {
+  color: var(--background-primary);
+  background-color: var(--accent);
+  cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
+
 /*portfolio*/
 
-.portfolio-link {
-  display: block;
-}
-.portfolio-link:hover,
-.portfolio-link:focus {
-  border: 1px solid #eeeeee;
+.portfolio-item:hover,
+.portfolio-item:focus {
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
